welcome.lessons.welcome.bat.bool2.LessBy10.scala.error
lessBy10:6: error: ';' expected but 'return' found.
	} return false
          ^