welcome.lessons.welcome.bat.bool2.LessBy10.scala.code
def lessBy10(a:Int, b:Int, c:Int):Boolean = {
	if ( a > b || b > c || c > a ) {
		return true
	} else if (  a < 10 || b< 10 || c < 10 ) {
		return true 
	} return false
}
